[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.5",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "streamlit>=1.46.0",
    "xlsxwriter>=3.2.5",
    "authlib>=1.6.0",
    "python-dotenv>=1.1.0",
    "mysql-connector-python>=9.3.0",
    "mysql>=0.0.3",
    "SQLAlchemy>=2.0.41"
    
]
